css/style.css
/* ... */
.pagination__link:not(.pagination__link--active):hover {
  color: #929292;
}

.pagination__link--active {
  color: #0F1355;
  border-bottom: 1px solid #0F1355;
  cursor: default;
}

.personal-area-section {
  padding-top: 229px;
  margin-top: -110px;
  background: -o-radial-gradient(67.21% 104.82%, 24.11% 128.12%, rgba(26, 28, 30, 0.73) 0%, #1A1C1E 100%);
  background: radial-gradient(24.11% 128.12% at 67.21% 104.82%, rgba(26, 28, 30, 0.73) 0%, #1A1C1E 100%);
}

.personal-area-section--calculator {
  margin-bottom: 39px;
}

.personal-area-section__container {
  position: relative;
  z-index: 10;
  max-width: 1710px;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-right: 30px;
  padding-left: 30px;
}

.personal-area-section__personal-area {
  border: 8px solid #232527;
}

.personal-area-section__title {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin-top: 0;
  margin-bottom: 0;
  width: 100%;
  padding-top: 43px;
  padding-bottom: 35px;
  font-weight: bold;
  font-size: 40px;
  font-family: "Decima Nova";
  line-height: 48px;
  text-align: center;
  color: #F6F6F6;
  text-transform: uppercase;
  background-color: #232527;
}

.personal-area-section__title::before {
  content: '';
  margin-right: 26px;
  width: 30px;
  height: 30px;
  background-image: url("../img/svg/user.svg");
  background-repeat: no-repeat;
  background-size: 30px;
  background-position: left center;
}

.personal-area {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  text-transform: uppercase;
  border-top: 0;
  background-color: #232527;
}

.personal-area {
  position: relative;
  overflow: hidden;
}

.personal-area__list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  margin: 0;
  text-indent: 0;
  list-style: none;
}

.personal-area__item {
  -ms-flex-negative: 0;
      flex-shrink: 0;
}

.personal-area__pagination {
  margin-top: 0;
  margin-bottom: 0;
}

.personal-area--calculator {
  padding-top: 45px;
}

.personal-area--thumbs {
  border: 0;
}

.personal-area__list {
  width: 100%;
  height: auto !important;
}

.personal-area__item {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  padding-left: 62px;
  background-color: #FAFAFA;
  width: 100%;
  min-height: 532px;
}

.personal-area__item:not(.personal-area__item--active) {
  height: 0;
}

.personal-area__item--active {
  z-index: 10000;
}

.personal-area__item--calculator {
  min-height: 725px;
}

.personal-area__item--moto .personal-area__select-container--year:last-of-type {
  margin-bottom: 167px !important;
}

.personal-area__item--track {
  padding-top: 140px;
  padding-right: 55px;
}

.personal-area__title {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin-top: 0;
  margin-bottom: 0;
  width: 100%;
  padding-top: 43px;
  padding-bottom: 35px;
  font-weight: bold;
  font-size: 40px;
  font-family: "Decima Nova";
  line-height: 48px;
  text-align: center;
  color: #F6F6F6;
  text-transform: uppercase;
  background-color: #232527;
}

.personal-area__title::before {
  content: '';
  margin-right: 26px;
  width: 30px;
  height: 30px;
  background-image: url("../img/svg/user.svg");
  background-repeat: no-repeat;
  background-size: 30px;
  background-position: left center;
}

.personal-area__title--calculator::before {
  display: none;
}

.personal-area__thumbs {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  width: 85%;
  padding: 0;
  margin: 0;
  text-indent: 0;
  list-style: none;
  padding-left: 8px;
  font-weight: 600;
  font-size: 18px;
  line-height: 25px;
  color: #BBBABA;
}

.personal-area__thumbs--calculator {
  width: 100%;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.personal-area__thumbs-description {
  margin-top: 0;
  margin-bottom: 0;
}

.personal-area__thumbs-item {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-transition: 0.3s ease-in-out;
  -o-transition: 0.3s ease-in-out;
  transition: 0.3s ease-in-out;
  padding-top: 1.5%;
  padding-bottom: 1%;
  padding-right: 10px;
  padding-left: 10px;
  width: 20%;
  cursor: pointer;
}

.personal-area__thumbs-item--entrance {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

.personal-area__thumbs-item--active {
  color: #1A1C1E;
  background-color: white;
}

.personal-area__thumbs-item--active .personal-area__thumbs-icon {
  fill: #1A1C1E;
}

.personal-area__thumbs-icon {
  -webkit-transition: 0.3s ease-in-out;
  -o-transition: 0.3s ease-in-out;
  transition: 0.3s ease-in-out;
  margin-right: 14px;
  fill: #BBBABA;
}
/* ... */

